# ion_gobble

./: Cargo.toml  readme.md
src/: color.rs  lib.rs  main.rs  partial.rs  tests.rs
