[package]
name = "ion_parse"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="ion_live"
path="src/main.rs"

[lib]

[dependencies]
#gobble= "0.1.4"
gobble = {git="https://github.com/storyfeet/gobble"}
#gobble = {path="../gobble/"}
